--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js --open",
+    "start": "webpack serve --config webpack.dev.js --mode development",
     "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
